[gd_scene load_steps=11 format=3 uid="uid://d3mxf6b1eerhd"]

[ext_resource type="Texture2D" uid="uid://dr34xvdv6bqyw" path="res://Scenes/game_object/Player/tile_0096.png" id="1_btxse"]
[ext_resource type="Script" uid="uid://cuw2enlcctedk" path="res://Scenes/game_object/Player/player.gd" id="1_l1sdq"]
[ext_resource type="PackedScene" uid="uid://bu428627hqs3f" path="res://Scenes/ui/gameover_Screen.tscn" id="2_vun7l"]
[ext_resource type="PackedScene" uid="uid://c0pl1mdmixnqt" path="res://Scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="3_lpcs4"]
[ext_resource type="PackedScene" uid="uid://byycu8jp6wqpo" path="res://Scenes/game_componenet/HealthComponent.tscn" id="4_42vfa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42vfa"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vun7l"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_f303f"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_he4bm"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_42vfa"]
radius = 25.1794

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_l1sdq")
MAX_SPEED = 715
gameover_sceen = ExtResource("2_vun7l")

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("3_lpcs4")]

[node name="HealthComponent" parent="." instance=ExtResource("4_42vfa")]
max_health = 5

[node name="DamageInterValTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -42.0
offset_right = 16.0
offset_bottom = -34.0
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_42vfa")
theme_override_styles/fill = SubResource("StyleBoxFlat_vun7l")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -19)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -17)
scale = Vector2(2, 2)
texture = ExtResource("1_btxse")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_f303f")
one_way_collision_margin = 0.0

[node name="PickupArea2D" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_he4bm")

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_42vfa")
